Fix tests for request parameters in custom files